# Skyrim-reverse-engineering-plugin

./: CMakeLists.txt  HookDamage.h  main.cpp
src/: FridaHooks.cpp  main.cpp
